--- a/assets/css/core.css
+++ b/assets/css/core.css
@@ -1,13 +1,16 @@
+.container{
+    width: 100%;
+    float: left;
+}
 .pingblock{
     min-width: 300px;
     margin:0 20px 20px 0;
     float:left;
 }
 .pingblock__item{
-    padding:20px;
-    width: calc(100% - 40px);
+    padding:20px 35px;
+    width: calc(100% - 70px);
     float:left;
-    transform: scale(1);
 }
 .status--green{
     background-color: #28b02d;
@@ -15,6 +18,10 @@
 }
 .status--red{
     background-color: #bf2424;
+    color: #fff;
+}
+.status--orange{
+    background-color: darkorange;
     color: #fff;
 }
 .togo__bar{
@@ -44,3 +51,30 @@
         width: 0;
     }
 }
+
+h3{
+    margin : 0 0 20px 0;
+}
+
+.row{
+    display: flex;
+    flex-wrap: wrap;
+    margin-right: -15px;
+    margin-left: -15px;
+    margin-bottom: 5px;
+}
+.col{
+    flex-basis: 0;
+    flex-grow: 1;
+    max-width: 100%;
+}
+.col.bold{
+    flex-basis: 0;
+    flex-grow: 1;
+    max-width: 40%;
+}
+.bold{
+    font-weight: bold;
+}
+
+
