--- a/assets/css/core.css
+++ b/assets/css/core.css
@@ -9,9 +9,9 @@
 }
 .placeholder{
     min-width: 300px;
-    margin:0 20px 20px 0;
+    margin:0 10px 10px 0;
     float:left;
-    min-height: 200px;
+    min-height: 171px;
     border: 1px dashed #ccc;
     background-color: #eee;
     background-image: url("../images/712.gif");
@@ -88,17 +88,34 @@ h3{
     font-weight: bold;
 }
 
-.cssbars{
+.stats__block{
     width: 100%;
+    float: left;
+    margin-bottom: 10px;
+    padding-bottom: 10px;
+    border-bottom: 1px solid #999;
+}
+.stats__title{
+    width: 30%;
+    float: left;
+    line-height: 34px;
+    font-weight: bold;
+}
+.stats__data{
+    width: 70%;
+    float: left;
+}
+.cssbars{
+    width: calc(100% - 4px);
     float : left;
-    height: 8px;
+    height: 30px;
     background-color:#fff;
-    margin-top: 20px;
-    padding-bottom: 2px;
-    padding-top: 2px;
+    padding: 2px 1px;
+    border: 1px solid #999;
+    border-top: none;
  }
 .cssbars div{
-    width: calc(5% - 4px);
+    width: calc(4% - 4px);
     float : right;
     margin:0 2px;
     background-color: #eee;
@@ -111,17 +128,20 @@ h3{
     float: left;
     align-self: flex-end;
 }
-
-
 .countdown{
     color: #000;
+    background-color: #fff;
     float: right;
-    width: 30px;
-    height: 30px;
-    border-radius: 30px;
+    width: 34px;
     text-align: center;
-    line-height: 30px;
     position: absolute;
     right: 15px;
-    top: 15px;
+    top: 20px;
+    border-radius: 3px;
+}
+
+.line{
+    width: 100%;
+    float: left;
+    margin-top: 40px;
 }
